--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,41 @@
-dd
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Browser title</title>
+
+<link rel=stylesheet href="css/style.css">
+
+  </head>
+  <body>
+    <h1 id="menu">Our Menu</h1>
+
+    <!-- sections shows all in only one row in the desktop view -->
+    <!-- Section title region: Each section should have a section title region that is always positioned
+    at the top right corner of the section no matter the view (desktop, tablet or mobile).
+    (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.) -->
+
+    <div>
+      <section class="dbox" id="box-chicken">
+        <h2 id="chicken">Chicken</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu tortor tempus, euismod sem eu, rutrum mauris. Sed id pretium lacus. Nam gravida leo nisl, accumsan sollicitudin lorem sodales vestibulum. Etiam ut ipsum arcu.
+        </p>
+      </section>
+
+      <section class="dbox" id="box-beef">
+        <h2 id="beef">Beef</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu tortor tempus, euismod sem eu, rutrum mauris. Sed id pretium lacus. Nam gravida leo nisl, accumsan sollicitudin lorem sodales vestibulum. Etiam ut ipsum arcu.      </p>
+      </section>
+
+      <section class="dbox" id="box-sushi">
+        <h2 id="sushi">Sushi</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu tortor tempus, euismod sem eu, rutrum mauris. Sed id pretium lacus. Nam gravida leo nisl, accumsan sollicitudin lorem sodales vestibulum. Etiam ut ipsum arcu.      </p>
+      </section>
+  </div>
+
+
+  </body>
+</html>
